# esp32-android-auto-wifi

./: .gitignore  Cargo.toml  LICENSE  QUICKSTART.md  README.md
android-app/: build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/java/com/androidauto/wifi/: MainActivity.kt  RustBridge.kt
android-app/app/src/main/java/com/androidauto/wifi/receiver/: BootReceiver.kt  WifiStateReceiver.kt
android-app/app/src/main/java/com/androidauto/wifi/service/: WifiAutoService.kt
android-app/app/src/main/res/drawable/: ic_notification.xml
android-app/app/src/main/res/layout/: activity_main.xml
android-app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android-app/app/src/main/res/values/: strings.xml  themes.xml
android-app/app/src/main/res/xml/: automotive_app_desc.xml  network_security_config.xml
android-app/rust-core/: Cargo.toml
android-app/rust-core/src/: lib.rs
firmware/: platformio.ini
firmware/src/: main.cpp
shared/: Cargo.toml
shared/src/: buffer.rs  lib.rs  protocol.rs  traits.rs
