# Shared Protocol Library
#
# Contains message definitions, DataForwarder trait, and zero-copy buffer
# implementations shared between firmware and Android JNI core.
# 
# Design Principles:
# - DRY: Single source of truth for protocol definitions
# - SOLID: Interface segregation via traits
# - no_std compatible for embedded use

[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]
defmt = ["dep:defmt"]

[dependencies]
heapless.workspace = true
serde.workspace = true
postcard.workspace = true
embedded-io.workspace = true
embedded-io-async.workspace = true
defmt = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
