# Android JNI Rust Core Library
#
# This library is compiled for Android targets and provides JNI bindings
# for the shared protocol logic. Used by the Kotlin Android app.

[package]
name = "rust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "rust_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# Shared protocol library with std features for Android
shared = { path = "../../shared", default-features = true }

# JNI bindings
jni = { version = "0.21", default-features = false }

# Logging (maps to Android logcat)
log = "0.4"
android_logger = "0.14"

# Error handling
thiserror = "2"

# Async runtime for network operations
tokio = { version = "1", features = ["rt", "net", "sync", "time", "macros"] }

# Serialization
serde.workspace = true
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies
ndk = "0.9"
ndk-context = "0.1"

[features]
default = []
